<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ASE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="hello">hello</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_edit_text_search">EditTextSearchActivity</string>
    <string name="title_activity_auto_complete_text">AutoCompleteTextActivity</string>
    <string name="autocompletetextview">AutoCompleteTextView</string>
    <string name="multiautocompletetextview">MultiAutoCompleteTextView</string>
    <string name="spinner">spinner</string>
    <string name="title_activity_spinner_animation">SpinnerAnimationActivity</string>
    <string name="str_title">猜猜看红心A是哪一张?</string>
    <string name="str_button">再玩一次</string>
    <string name="title_activity_play_guess_placard">PlayGuessPlacardActivity</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="shrink">缩小</string>
    <string name="magnify">放大</string>
    <string name="turn_right">turn right</string>
    <string name="turn_left">turn left</string>
    <string name="thitle_activity_magnify_shrink_image">MagnifyShrinkImageActivity</string>
    <string name="title_activity_rotate_image">RotateImageActivity</string>
    <string name="down">down</string>
    <string name="bigger">bigger</string>
    <string name="title_activity_sliding_drawer">SlidingDrawerActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>